test/failing/badptr.trunnel

struct s {
  nulterm s;
  @foo bar;
}